<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/px_s_margin"
        tools:context=".ui.fragment.MainFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_payment_configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_config_pagamento"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_custom_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_habilitar_pagto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_payment_configuration" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_custom_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/switch_habilitar_loading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_custom_payment" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_charge_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/switch_habilitar_cobranca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_custom_loading" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_advanced_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_config_avancadas"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_charge_credit" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/use_custom_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_strings_customizadas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_advanced_config" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/use_dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_dialog_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/use_custom_string" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/use_custom_fragment_payment_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_screen_customized"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/use_dialog_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_btn_compra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/use_custom_fragment_payment_result" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>